Time: 9 ms (48.54%), Space: 46.5 MB (70.55%) - LeetHub