@@ -1,29 +1,30 @@
 class Solution {
     public int[][] merge(int[][] intervals) {
         Arrays.sort(intervals, (a,b)->(a[0]!=b[0]?a[0]-b[0]:a[1]-b[1]));
-        List<int[]> list = new ArrayList<>();
+        LinkedList<int[]> list = new LinkedList<>();
         int n = intervals.length;
-        list.add(intervals[0]);
+        list.addLast(intervals[0]);
         for (int i=1; i<n; i++)
         {
-            int[] last = list.get(list.size()-1);
+            int[] last = list.getLast();
             if (last[1]>=intervals[i][0])
             {
                 int min = Math.min(intervals[i][0], last[0]);
                 int max = Math.max(intervals[i][1], last[1]);
-                list.remove(list.size()-1);
-                list.add(new int[]{min, max});
+                list.removeLast();
+                list.addLast(new int[]{min, max});
             }
             else
             {
-                list.add(intervals[i]);
+                list.addLast(intervals[i]);
             }
         }
         int size = list.size();
         int[][] answer = new int[size][2];
         for (int i=0; i<size; i++)
         {
-            answer[i] = list.get(i);
+            answer[i] = list.getFirst();
+            list.removeFirst();
         }
         return answer;
     }
